--- a/ej 1-9/ej1-9.html
+++ b/ej 1-9/ej1-9.html
@@ -4,18 +4,23 @@
 	<title></title>
 </head>
 <body>
+
+
+
+
+
 	<script type="text/javascript">
 		var nombre="Miriam";
 		var edad= "48";
 		var cuidad="Hurlingham";
 		console.log("Mi nombre es "+nombre+" tengo "+ edad + " y vivo en "+cuidad); 
 	
-		alert("Visitantes que tu sitio es muy copado y deben disfrutarlo con cautela");
+		alert("Mi sitio es muy copado y deben disfrutarlo con cautela");
 		nombre=prompt("¿Cual es tu nombre? ");
 		alert("Hola "+nombre)
 		edad=prompt("¿Cual es tu edad? ")
 		console.log("tenes "+edad+" años") 
-		alert("tu nombre es "+nombre+" y tenes tenes "+edad+" años")
+		alert("tu nombre es "+nombre+" y tenes "+edad+" años")
 
 		
 		var dias=parseInt(edad)*365;
