comit prueba de errores

--- a/ej8.8Dom/ej8.8Dom.html
+++ b/ej8.8Dom/ej8.8Dom.html
@@ -8,7 +8,7 @@
 <body>
     <div  >    </div>
     <div id="source">  <p>noche noche</p>  </div>
-    <div id="destination" > <p>playa playa</p>   </div>
-    <script type="text/javascript" src="ej8.8Dom.js"> </script>
+    <div id="destination" > <p>playa playa</p>   </div><script type="text/javascript" src="ej8.8Dom.js"> </script>
+    
 </body>
 </html>
